# CodeExpositor

./: .gitignore  HARNESS.md  README.md  pyproject.toml
corpus/tiny-c/: README.md  compile_commands.json
corpus/tiny-cpp/: compile_commands.json
docs/: ai-contract.md  architecture-spec-v0.1.md  graph-model.md  mvp-implementation-plan.md  mvp-status.md  roadmap-mvp.md
docs/adr/: ADR-001-canonical-graph.md  ADR-002-clang.md  ADR-003-tree-sitter.md  ADR-004-build-context.md  ADR-005-ai-evidence.md  ADR-006-storage.md
examples/ffmpeg/: README.md  build-context.sample.json  doctor.sample.txt  mpeg4-case-study.sample.json  report.sample.html
examples/tiny/: README.md  includes.dot  mpeg4-case-study.json  report.html
expositor/: __init__.py  _util.py  cli.py  model.py
expositor/architecture/: __init__.py  api.py
expositor/build_context/: __init__.py  api.py
expositor/callgraph/: __init__.py  api.py
expositor/case_studies/: __init__.py  mpeg4.py
expositor/doctor/: __init__.py  api.py
expositor/documentation/: __init__.py  api.py
expositor/explain/: __init__.py  api.py
expositor/exporters/: __init__.py  dot.py  graphviz.py  svg.py
expositor/graph/: __init__.py  build.py
expositor/includes/: __init__.py  api.py
expositor/intake/: __init__.py  api.py
expositor/outline/: __init__.py  api.py  tree_sitter.py
expositor/queries/: __init__.py  api.py
expositor/report/: __init__.py  html.py
expositor/semantic/: __init__.py  api.py
expositor/storage/: __init__.py  sqlite.py
expositor/symbols/: __init__.py  (+2 more)
tests/: __init__.py  test_core.py
(+9 files in other folders)
