[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-expositor"
version = "0.1.0"
description = "Build-aware, architecture-aware source-code understanding for C/C++ repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
expositor = "expositor.cli:main"

[tool.setuptools.packages.find]
include = ["expositor*"]
